docs: remove obsolete parameter -XX:+ZGenerational